# circular-application-menu

./: .gitignore  AUTHORS  CHANGELOG  ChangeLog  LICENSE  Makefile  Makefile.am  README  TODO  autogen.sh  circular-main-menu.desktop  configure.ac
debian/: README.debian  changelog  circular-application-menu.links  circular-application-menu.manpages  circular-main-menu.1  control  copyright  rules
docs/manpages/: circular-main-menu.1
man/: Makefile.am  cmm.1
pixmaps/: Makefile.am
src/: Makefile.am  cmmcircularmainmenu.c  cmmcircularmainmenu.h  main.c  main.h
