# Process this file with automake to produce Makefile.in
SUBDIRS = src man pixmaps

camdocdir = $(docdir)
camdoc_DATA = \
	README\
	COPYING\
	AUTHORS\
	ChangeLog\
	INSTALL\
	NEWS

# Install SVG Icon
appicondir=$(datadir)/icons/hicolor/scalable/apps
appicon_DATA=circular-main-menu.svg

# Install Desktop Entry
desktopdir = $(datadir)/applications
desktop_DATA = circular-main-menu.desktop

